--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,78 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+---
+// Supports weights 100-900
+import '@fontsource-variable/urbanist';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+import LightDarkBtn from "../components/LightDarkBtn.astro";
+
+
+interface Props {
+  title: string;
+}
+
+const { title } = Astro.props
+
+---
+
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="description" content="My English Lessons">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+
+  <!--Colors -->
+  <link rel="stylesheet" href="../src/styles/colors.css">
+  <!--Reset -->
+  <link rel="stylesheet" href="../src/styles/reset.css">
+  <!--Spacing -->
+  <link rel="stylesheet" href="../src/styles/spacing.css">  
+  <!--Utils -->
+  <link rel="stylesheet" href="../src/styles/utils.css">
+  <title>{title}</title>
+</head>
+<body>
+  <Header/>
+  <main>
+    <slot />
+  </main>
+  <Footer/>
+  <LightDarkBtn />
+</body>
 </html>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+<style is:global>
+
+  html {
+    font-size: 16px;
+  }
+
+  body {
+    background-color: var(--color-bg-body);
+    padding-inline: var(--padding-inline-body-mobile);
+    font-family: var(--font-family);
+    font-size: var(--font-size-body);
+    font-weight: var(--font-weight-regular);
+    font-style: var(--font-style);
+    width: 100dvw;
+    overflow-x: hidden;
+    color: var(--color-text);
+  }
+
+  /* #################### RESPOSIVE #################### */
+  /* TABLET */
+  @media (width > 480px) {
+    body {
+      padding-inline: var(--padding-inline-body-tablet);
+    }
+  }
+
+  /* DESKTOP */
+  @media (width > 1024px) {
+    body {
+      padding-inline: var(--padding-inline-body-desktop);
+    }
+  }
+
 </style>
